--- a/part5-20.configuration/src/pages/templates/pages/index.html
+++ b/part5-20.configuration/src/pages/templates/pages/index.html
@@ -23,7 +23,9 @@
 		
         <h2>Transfer money</h2>
 
-        <form id='transfer' action='transfer/' method="GET">             <span>To:</span><br/>
+        <form id='transfer' action='transfer/' method="POST">
+            {% csrf_token %}
+            <span>To:</span><br/>
             <select name="to">
 			{% for account in accounts %}
                 <option value="{{account.user.username}}">{{account.user.username}}</option>
